<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_text_name">Task Name</string>
    <string name="add_text_deadline">Deadline</string>
    <string name="add_text_priority">Priority</string>
    <string name="add_task_button">Add New Task</string>
    <string name="back_button">BACK</string>
    <string name="new_task">New Task</string>
    <string name="low">LOW</string>
    <string name="normal">NORMAL</string>
    <string name="high">HIGH</string>
    <string name="priority">Priority</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_task_button">Edit New Task</string>
</resources>